<resources>
    <string name="topodroid_man">https://sites.google.com/site/speleoapps/home/topodroid/docs</string>
    <string name="app_name">TopoDroid</string>
    <string name="version_ask">Updating to a new version of TopoDroid.\nDo you want to reinstall drawing items?</string>
    <string name="version_title">Version update</string>
    <string name="POINT">POINT</string>
    <string name="LINE">LINE</string>
    <string name="AREA">AREA</string>
    <string name="HELP">HELP</string>
    <string name="STATION">STATION </string>
    <string name="memoryA3">DistoX A3 memory</string>
    <string name="memoryX310">DistoX X310 memory</string>
    <string name="memory_data">DistoX data</string>
    <string name="td_symbol_text">Do you need to install drawing tools?\nYou can do it later with the app TdSymbol</string>
    <string name="td_symbol_ask">Don\'t ask me again</string>
    <string name="thp_user">user</string>
    <string name="thp_label">label</string>
    <string name="thl_user">user</string>
    <string name="thl_wall">wall</string>
    <string name="tha_user">user</string>
    <string name="tha_water">water</string>
    <string name="missing_area">AREA</string>
    <string name="missing_hint">Please, enable the missing tools or install them</string>
    <string name="missing_line">LINE</string>
    <string name="missing_point">POINT</string>
    <string name="missing_station">Missing station</string>
    <string name="missing_symbols">There are missing drawing tools.\nSave anyway ?</string>
    <string name="missing_title">MISSING SYMBOLS</string>
    <string name="missing_warning">The following drawing tools are missing.\n</string>
    <string name="failed_snap_to_line">No close line-point to snap the area border to</string>
    <string name="failed_snap_to_point">No close point to snap the point to</string>
    <string name="calib_new">New Calibration</string>
    <string name="calib_exists">Calibration already exists</string>
    <string name="calib_delete">Delete calibration </string>
    <string name="calib_device_mismatch">WARNING: Calibration-Device mismatch</string>
    <string name="calib_no_name">The name is mandatory</string>
    <string name="calib_gm_undelete">Undelete calibration data?</string>
    <string name="calib_saved">Saved calibration</string>
    <string name="calib_updated">Updated calibration</string>
    <string name="calib_compute_groups">Computing calibration data groups ...</string>
    <string name="calib_compute_coeffs">Computing calibration coefficients ...</string>
    <string name="calib_write_coeffs">Writing calibration coefficients ...</string>
    <string name="connect_failed">Failed connect</string>
    <string name="data"> data</string>
    <string name="using">Using %1$s %2$s</string>
    <string name="calib_error">Error: %1$.4f degrees</string>
    <string name="calib_max_error">Max. error: %1$.4f degrees</string>
    <string name="calib_iter">Iterations: %1$d</string>
    <string name="calib_saturated_values">WARNING: %1$d saturated data</string>
    <string name="algorithm">Algorithm:</string>
    <string name="auto">auto</string>
    <string name="linear">linear</string>
    <string name="non_linear">non-linear</string>
    <string name="device_algo_failed">Algorithm auto-determination failed\nUsing linear algorithm</string>
    <string name="device_busy">Device busy</string>
    <string name="device_illegal_addr">Illegal memory address</string>
    <string name="device_info">Device info</string>
    <string name="device_model_set">Do you really want to change the model of the device</string>
    <string name="device_none">No DistoX selected</string>
    <string name="device_pairing">Pairing: check notifications</string>
    <string name="device_reset">Reset DistoX memory</string>
    <string name="device_code">DistoX code %1$4d</string>
    <string name="device_firmware">Firmware  %1$d.%2$d</string>
    <string name="device_hardware">Hardware  %1$d.%2$d</string>
    <string name="device_status_angle">Angle units %1$s</string>
    <string name="device_status_compass">Compass/clino %1$s</string>
    <string name="device_status_calib">Mode %1$s</string>
    <string name="device_status_silent">Silent %1$s</string>
    <string name="bt_reset">Reset bluetooth connection</string>
    <string name="save_as">save as</string>
    <string name="comment">comment</string>
    <string name="flag">Flag</string>
    <string name="duplicate">duplicate</string>
    <string name="surface">surface</string>
    <string name="extend">Extend</string>
    <string name="extend_ignore">None</string>
    <string name="extend_left">Left</string>
    <string name="extend_right">Right</string>
    <string name="extend_vert">Vert</string>
    <string name="external_prompt">Enter measurement</string>
    <string name="splay_at_to">LRUD at TO station</string>
    <string name="few_data">Not enough data</string>
    <string name="import_title">File Import</string>
    <string name="import_wait">Importing file... please wait...</string>
    <string name="import_already">Survey already imported</string>
    <string name="import_none">No file to import</string>
    <string name="import_zip_ok">Successfully imported zip file</string>
    <string name="import_zip_wait">Imported zip file may take long. Please wait ...</string>
    <string name="sketch_loading">Loading sketch ... please wait...</string>
    <string name="sketch_saving">Saving sketch ... please wait...</string>
    <string name="lookup_wait">Internet lookup ... please wait...</string>
    <string name="head_tail">Memory: </string>
    <string name="head_tail_failed">Failed to read DistoX memory index</string>
    <string name="head_tail_store_failed">Failed to store DistoX memory index</string>
    <string name="illegal_data_value">Illegal data value</string>
    <string name="label_title">LABEL</string>
    <string name="label_text">Enter the label text</string>
    <string name="altitude">Alt. </string>
    <string name="latitude">Lat. </string>
    <string name="longitude">Long. </string>
    <string name="altitude_hint">Alt. [meters]</string>
    <string name="altitude_wgs84">WGS84 altitude</string>
    <string name="latitude_hint">Lat. dd:mm:ss.sss</string>
    <string name="longitude_hint">Long. dd:mm:ss.sss</string>
    <string name="loop_closure_errors">Loop closure errors</string>
    <string name="loop_none">no loop</string>
    <string name="error_azimuth_required">Azimuth required</string>
    <string name="error_length_required">Length required</string>
    <string name="error_clino_required">Clino required</string>
    <string name="error_comment_required">Comment required</string>
    <string name="error_begin_required">Start address required</string>
    <string name="error_declination_number">Declination must be a number</string>
    <string name="error_end_required">Final address required</string>
    <string name="error_from_required">First station required</string>
    <string name="error_group_required">Group number required</string>
    <string name="error_group_non_integer">Group must be integer number</string>
    <string name="error_alt_required">Altitude required</string>
    <string name="error_invalid_number">Invalid number</string>
    <string name="error_lat_required">Latitude required</string>
    <string name="error_long_required">Longitude required</string>
    <string name="error_name_required">Name required</string>
    <string name="error_start_required">Reference station required</string>
    <string name="error_station_already_fixed">Station already with coordinates</string>
    <string name="error_station_required">Station required</string>
    <string name="error_station_non_existing">Non existing station</string>
    <string name="error_sensor_required">Sensor required</string>
    <string name="error_value_required">Value required</string>
    <string name="group_title">Assign calibration data groups</string>
    <string name="group_policy_four">Policy: group by four</string>
    <string name="group_policy_sixteen">Policy: four groups of four, other single</string>
    <string name="remote_on">Laser ON</string>
    <string name="remote_off">Laser OFF</string>
    <string name="remote_measure">Measure</string>
  <string name="pref_leg_shots_title">Minimum leg shots</string>
  <string name="pref_leg_shots_summary">Minimum number of shots per leg</string>
  <string name="pref_crs_title">C R S </string>
  <string name="pref_crs_summary">CRS name</string>
  <string name="pref_crs_message">Enter the CRS name as in Proj4</string>
  <string name="pref_gps_averaging_title">GPS Averaging</string>
  <string name="pref_gps_averaging_summary">Whether to use GPSAveraging</string>
  <string name="pref_altitude_title">Altitude</string>
  <string name="pref_altitude_summary">Select altitude type</string>
  <string name="pref_altimetric_title">Orthometric atitude lookup</string>
  <string name="pref_altimetric_summary">Internet lookup of orthometric altitude</string>
  <string name="pref_survey_stations_title">Survey stations</string>
  <string name="pref_survey_stations_summary">Automatic survey stations</string>
  <string name="pref_accel_thr_title">Acceleration tolerance</string>
  <string name="pref_accel_thr_summary">Tolerance over the shots accelerations</string>
  <string name="pref_accel_thr_message">Tolerance over the shots accelerations</string>
  <string name="pref_mag_thr_title">Magnetic tolerance</string>
  <string name="pref_mag_thr_summary">Tolerance over the shots magnetic field</string>
  <string name="pref_mag_thr_message">Tolerance over the shots magnetic field</string>
  <string name="pref_dip_thr_title">Magnetic dip tolerance</string>
  <string name="pref_dip_thr_summary">Tolerance over the shots magnetic dip</string>
  <string name="pref_dip_thr_message">Tolerance over the shots magnetic dip</string>
  <string name="pref_leg_title">Leg tolerance</string>
  <string name="pref_leg_summary">Tolerance among the shots of a leg</string>
  <string name="pref_leg_message">Tolerance among the shots of a leg</string>
  <string name="pref_team_title">Team</string>
  <string name="pref_team_summary">Surveying team</string>
  <string name="pref_team_message">Default surveying team</string>
  <string name="pref_ethr_title">Extend threshold</string>
  <string name="pref_ethr_summary">Splay shot extend threshold</string>
  <string name="pref_ethr_message">Threshold to compute splay shot extend</string>
  <string name="pref_vthr_title">Shot vertical threshold</string>
  <string name="pref_vthr_summary">Vertical LRUD/WENS threshold</string>
  <string name="pref_vthr_message">Leg inclination threshold between LRUD/WENS</string>
  <string name="pref_shot_timer_title">Shot direction timer</string>
  <string name="pref_shot_timer_summary">Seconds to wait before measuring the shot direction</string>
  <string name="pref_shot_timer_message">Seconds before measuring the shot direction</string>
  <string name="pref_beep_volume_title">Timer-beep volume</string>
  <string name="pref_beep_volume_summary">Percent timer-beep volume</string>
  <string name="pref_beep_volume_message">Percent timer-beep volume</string>
  <string name="pref_loopClosure_title">Loop closure</string>
  <string name="pref_loopClosure_summary">Loop closure-error compensation</string>
  <string name="pref_splayExtend_title">Estimate splay extend</string>
  <string name="pref_splayExtend_summary">Whether to estimate the extend of splays</string>
  <string name="pref_unit_length_title">Length units</string>
  <string name="pref_unit_length_summary">Display units for lengths</string>
  <string name="pref_unit_angle_title">Angle units</string>
  <string name="pref_unit_angle_summary">Display units for angles</string>
  <string name="pref_unit_location_title">Location units</string>
  <string name="pref_unit_location_summary">Display units for locations</string>
</resources>