<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:paddingBottom="3dp">

      <Button android:id="@+id/remote_on"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_marginBottom="10dip"
        android:layout_gravity="left"
        android:background="@drawable/button"
        style="@style/button_default"
        android:text="@string/remote_on"
        />

      <Button android:id="@+id/remote_off"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_marginBottom="10dip"
        android:layout_gravity="left"
        android:background="@drawable/button"
        style="@style/button_default"
        android:text="@string/remote_off"
        />

      <Button android:id="@+id/remote_measure"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_gravity="left"
        android:background="@drawable/button"
        style="@style/button_default"
        android:text="@string/remote_measure"
        android:textColor="@color/textdelete"
        />

    <!-- LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content"
      android:orientation="horizontal" 
      android:layout_marginTop="25dp" 
      >
      <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        >
      <Button android:id="@+id/button_back"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:background="@drawable/button"
        style="@style/button_default"
        android:text="@string/button_back"
        />
      </LinearLayout>
    </LinearLayout -->

</LinearLayout>
